// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScaleOfSignificanceListEditorField function should return <ScaleOfSignificanceListEditor> 1`] = `
<Memo(Connect(ScaleOfSignificanceListEditor))
  errorText={null}
  input={
    {
      "onChange": [MockFunction],
    }
  }
  listEditorId="rek-significance"
  onChange={[MockFunction]}
/>
`;

exports[`ScaleOfSignificanceListEditorField function should return <ScaleOfSignificanceListEditor> with error attributes 1`] = `
<Memo(Connect(ScaleOfSignificanceListEditor))
  input={
    {
      "meta": {
        "errorText": "test",
      },
      "onChange": [MockFunction],
    }
  }
  listEditorId="rek-significance"
  meta={
    {
      "errorText": "test",
    }
  }
  onChange={[MockFunction]}
/>
`;
